# testbenchfinal

./: README.md  repomix-output.txt
install/: local_setup.sh  setup.sh
install/motor_controller/include/motor_controller/: gpio_subscriber_node.hpp  motor_controller_node.hpp
install/motor_controller/include/motor_controller/motor_controller/msg/: dccommand.h  dccommand.hpp  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h  stepper_command.h  stepper_command.hpp  unitree_command.h  unitree_command.hpp
install/motor_controller/include/motor_controller/motor_controller/msg/detail/: dccommand__builder.hpp  dccommand__description.c  dccommand__functions.h  dccommand__rosidl_typesupport_fastrtps_c.h  dccommand__rosidl_typesupport_fastrtps_cpp.hpp  dccommand__rosidl_typesupport_introspection_c.h  dccommand__rosidl_typesupport_introspection_cpp.hpp  dccommand__struct.h  dccommand__struct.hpp  dccommand__traits.hpp  dccommand__type_support.cpp  dccommand__type_support.h  dccommand__type_support.hpp  stepper_command__builder.hpp  stepper_command__functions.h  stepper_command__rosidl_typesupport_fastrtps_c.h  stepper_command__rosidl_typesupport_fastrtps_cpp.hpp  stepper_command__rosidl_typesupport_introspection_c.h  stepper_command__rosidl_typesupport_introspection_cpp.hpp  stepper_command__struct.h  stepper_command__struct.hpp  stepper_command__traits.hpp  stepper_command__type_support.c  stepper_command__type_support.cpp  stepper_command__type_support.h  stepper_command__type_support.hpp  unitree_command__builder.hpp  unitree_command__functions.h  unitree_command__rosidl_typesupport_fastrtps_c.h  unitree_command__rosidl_typesupport_fastrtps_cpp.hpp  unitree_command__rosidl_typesupport_introspection_c.h  unitree_command__rosidl_typesupport_introspection_cpp.hpp  unitree_command__struct.h  unitree_command__struct.hpp  unitree_command__traits.hpp  unitree_command__type_support.h  unitree_command__type_support.hpp
install/motor_controller/lib/motor_controller/: command_subscriber  gpio_subscriber_node  motor_controller_node
install/motor_controller/share/ament_index/resource_index/package_run_dependencies/: motor_controller
install/motor_controller/share/ament_index/resource_index/parent_prefix_path/: motor_controller
install/motor_controller/share/ament_index/resource_index/rosidl_interfaces/: motor_controller
install/motor_controller/share/motor_controller/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/motor_controller/share/motor_controller/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_motor_controller__rosidl_generator_cExport-release.cmake  export_motor_controller__rosidl_typesupport_fastrtps_cExport-release.cmake  export_motor_controller__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_motor_controller__rosidl_typesupport_fastrtps_cppExport-release.cmake  motor_controllerConfig-version.cmake  motor_controllerConfig.cmake  motor_controller__rosidl_typesupport_cExport-noconfig.cmake  motor_controller__rosidl_typesupport_cExport-release.cmake  motor_controller__rosidl_typesupport_cppExport.cmake  motor_controller__rosidl_typesupport_introspection_cExport.cmake  motor_controller__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/motor_controller/share/motor_controller/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/motor_controller/share/motor_controller/msg/: Dccommand.idl  Dccommand.json  Dccommand.msg  StepperCommand.idl  StepperCommand.json  StepperCommand.msg  UnitreeCommand.idl  UnitreeCommand.json  UnitreeCommand.msg
log/: latest_build
src/motor_controller/: CMakeLists.txt
src/motor_controller/include/motor_controller/: gpio_subscriber_node.hpp
src/motor_controller/launch/: control_station.launch.py  motor_controller_launch.py  robot.launch.py
src/motor_controller/libs/serial/: CMakeLists.txt
src/motor_controller/src/: command_subscriber.cpp  gpio_subscriber_main.cpp  gpio_subscriber_node.cpp  motor_controller_node.cpp
src/terratrek_robot/: CMakeLists.txt  package.xml
src/terratrek_robot/config/: JointTrajectory.yaml  joystick.yaml  mapper_params_online_async.yaml  my_controllers.yaml  nav2_params.yaml
src/terratrek_robot/description/: gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
src/terratrek_robot/launch/: joystick.launch.py  launch_robot.launch.py  launch_sim.launch.py  rsp.launch.py
src/terratrek_robot/src/: gpio_launch_subscriber.py
src/terratrek_robot/worlds/: mainworld.world  robot_world.sdf  test  test.world
src/terratrek_robot/worlds/maps/: test_map_save.pgm  test_map_save.yaml  test_map_serial.data
